# goldberg

./: .gitattributes  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  build_linux.sh  build_linux_premake.sh  build_win_premake.bat  generate_win_premake.bat  package_win.bat  package_win_debug.bat  package_win_release.bat  premake5-deps.lua  premake5.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: emu-build-all-win.yml  emu-deps-win.yml  migrate_gse-build-win.yml  release.yml
cmake/: SOURCE.txt  toolchain-x86.cmake
curl/: SOURCE.txt
dev.notes/: interfaces.csv
dll/: auth.cpp  base.cpp  base64.cpp  callsystem.cpp  client_known_interfaces.cpp  dll.cpp  flat.cpp  local_storage.cpp  net.proto  network.cpp  p2p_manager.cpp  playtime.cpp  settings.cpp  settings_parser.cpp  settings_parser_ufs.cpp  source_query.cpp  steam_app_ids.cpp  steam_apps.cpp  steam_client.cpp  steam_client_interface_getter.cpp  steam_friends.cpp  steam_gameserver.cpp  steam_gameserver_items.cpp  steam_gameserverstats.cpp  steam_inventory.cpp  steam_matchmaking.cpp  steam_matchmaking_servers.cpp  steam_networking.cpp  steam_networking_sockets.cpp  steam_ugc.cpp  steam_user.cpp  steam_user_items.cpp  steam_user_stats.cpp  steam_user_stats_leaderboard.cpp  steam_user_stats_stats.cpp  steam_utils.cpp  ugc_remote_storage_bridge.cpp  voicechat.cpp  wrap.cpp
dll/dll/: auth.h  base.h  base64.h  capicmcallback.h  client_known_interfaces.h  common_includes.h  dll.h  econ_item.h  local_storage.h  network.h  p2p_manager.hpp  playtime.h  settings.h  settings_parser_ufs.h  steam_app_ids.h  steam_apps.h  steam_client.h  steam_gameserver.h  steam_gameserver_items.h  steam_gameserverstats.h  steam_matchmaking_servers.h  steam_networking.h  steam_networking_sockets.h  steam_user.h  steam_user_items.h  steam_user_stats.h  ugc_remote_storage_bridge.h  voicechat.h
example_plugin/: main.cpp
game_overlay_renderer_lib/: game_overlay_renderer_lib.cpp  game_overlay_renderer_lib.h
helpers/: common_helpers.cpp  pe_helpers.cpp
helpers/common_helpers/: common_helpers.hpp
helpers/pe_helpers/: pe_helpers.hpp
ingame_overlay/: SOURCE.txt
libs/detours/: SOURCE.txt
libs/json/: SOURCE.txt
libs/stb/: SOURCE.txt
libs/utfcpp/: SOURCE.txt
mbedtls/: SOURCE.txt
opus/: SOURCE.txt
overlay_experimental/fonts/: binary_to_compressed_c.cpp.txt
pdk/: pdk.cpp  pdk.h
portaudio/: SOURCE.txt
post_build/: README.experimental_steamclient.md  README.release.md  README.steam_old_lib.md
post_build/steam_settings.EXAMPLE/: configs.app.EXAMPLE.ini  configs.main.EXAMPLE.ini
post_build/win/ColdClientLoader.EXAMPLE/extra_dlls.EXAMPLE/: load_order.txt
premake/: SOURCE.txt
protobuf/: SOURCE.txt
resources/: README.md
resources/win/api/32/: resources.rc
resources/win/api/64/: resources.rc
resources/win/client/32/: resources.rc
resources/win/client/64/: resources.rc
resources/win/file_dos_stub/: file_dos_stub.cpp
resources/win/game_overlay_renderer/32/: resources.rc
resources/win/game_overlay_renderer/64/: resources.rc
resources/win/launcher/32/: resources.rc
resources/win/launcher/64/: resources.rc
sdk/: Readme.txt
sdk/steam/: isteamclient001.h  isteamclient002.h  isteamclient003.h  isteamclient004.h  isteamclient005.h  isteamremoteplay.h  isteamuser001.h  isteamuser002.h  isteamuser002_old.h  isteamuser004.h  steam_api.h  steam_api_flat.h
steam_old_lib/: README.md  dllmain.cpp  steam_old_lib.cpp  steam_old_lib.hpp
steam_old_lib/steam_old_lib/: SteamCommon.h  steam_old_lib.hpp
steamclient/: steamclient.cpp
tools/lobby_connect/: lobby_connect.cpp
tools/steamclient_loader/linux/: README.md  ldr_cmdline.EXAMPLE.txt  steamclient_loader.sh
tools/steamclient_loader/linux/x32/: README.md
tools/steamclient_loader/linux/x64/: README.md
tools/steamclient_loader/win/: ColdClientLoader.cpp  ColdClientLoader.ini
tools/steamclient_loader/win/extra_protection/: dllmain.cpp  stubdrm.cpp
tools/steamclient_loader/win/extra_protection/extra_protection/: stubdrm.hpp
